* refactored support functions to util.js * fix menu wrapping on small screens * add lang option in home articales and render baybayin in language filipino * add tooltip(original text) for baybayin rendered home articles

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,7 @@
 @import "./common";
+@import "fonts/Baybayin.css";
+
+.lang-filipino { font-family: "Baybayin-Modern-Club", serif; }
 
 .app {
     @include transition('ease-in-out', 0.7s);;
@@ -61,7 +64,7 @@
                     list-style: none;
                     padding: 0;
                     margin: 0;
-    
+
                     li {
                         @include transition(ease-in-out, 0.3s);
                         padding: 14px;
@@ -73,7 +76,17 @@
                     li.selected {
                         background-color: $babayi;
                         color: white;
-                        
+                    }
+
+                    li[name='translator'] {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                    }
+
+                    li[name='translator'] > span {
+                        display: inline-flex;
+                        align-items: center;
                     }
                 }
                 
