--- a/src/components/Content/BaybayinTranslator.scss
+++ b/src/components/Content/BaybayinTranslator.scss
@@ -51,7 +51,7 @@
         background-color: white;
         border-radius: $border-radius;
         padding: 14px;
-        height: 250px;
+        height: 259px;
     }
     
     textarea {
@@ -68,7 +68,7 @@
         overflow: auto;
         
         .dimmed {
-            color: gainsboro;
+            color: #000;
             font-size: small;
         }
         
